--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
 	"dependencies": {
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.46.0",
-		"react-native-maps": "^0.15.3"
+		"react-native-maps": "^0.15.3",
+		"react-native-svg-uri": "^1.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
+		"babel-preset-expo": "^2.0.0",
 		"babel-preset-react-native": "2.1.0",
 		"jest": "20.0.4",
 		"react-test-renderer": "16.0.0-alpha.12"
