--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"@expo/vector-icons": "^5.0.0",
+		"native-base": "^2.3.0",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.46.0",
 		"react-native-maps": "^0.15.3",
